2009-05-08  Jeffrey Stedfast  <fejj@novell.com>

	* application.cpp (GetResourceAsPath): Updated.

	* utils.cpp (CanonicalizeFilename): Now takes a 'lower' argument
	to specify whether the filename should be lowercased as it is
	canonicalized.
	(ExtractAll): The 'canon' argument has been renamed to 'lower'
	which more accurately reflects its purpose. Pass this on to
	CanonicalizeFilename().

2009-05-08  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* control.cpp:
	* contentcontrol.cpp: Revert the changes in r133738 until I
	  can figure out why the x86 bot doesn't like them. It's
	  causing the extended controls tests to time out.

2009-05-07  Alan McGovern  <amcgovern@novell.com>

	* control.h:
	* control.cpp:
	* contentcontrol.cpp: If the content property changes, the
	  Template is cleared if it has already been applied.

2009-05-07  Andreia Gaita  <avidigal@novell.com>

	* src/uielement.cpp (GetTransformToUIElementWithError): Don't fail if
	the to_element is the top level element.

2009-05-06  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (dependency_object_set_attributes): we can't assume
	that a NULL value for @v means it hasn't been set, since {x:Null}
	could have been specified.  we need another flag to make it work.

2009-05-06  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (OnPropertyChanged): Guard against calling
	ResetIMContext in the middle of some keyboard input.

2009-05-05  Chris Toshok  <toshok@ximian.com>

	* collection.cpp (Collection::InsertWithError): we need to make a
	further copy because the caller could remove the element in a
	handler, which causes us to delete the value (values aren't ref
	counted.)

2009-05-05  Jeffrey Stedfast  <fejj@novell.com>

	* textbox.cpp (TextBoxBase::Initialize): Set use_preedit() to
	false since we're not rendering the preedit strings ourselves.
	(TextBoxBase::SetSurface): Update the GtkIMContext's client
	GdkWindow.
	(TextBoxView::UpdateCursor): Update the GtkIMContext's idea of